syntax = "proto3";

package address_book;

service AddressBookService {
  rpc GetAddressByName(GetAddressByNameReq) returns (GetAddressByNameRep) {}
  rpc Register(RegisterReq)  returns (RegisterRep) {}
}

message  GetAddressByNameReq {
  string name = 1;
}

message GetAddressByNameRep  {
  PersonalInfo personal_info = 1;
  bool result = 2;
}

message RegisterRep {
  string result = 1;
}

message RegisterReq {
  PersonalInfo personal_info = 1;
}

message PersonalInfo {
  string name = 1;
  string phone_number =2;
  string address = 3;
}

message AddressBook {
  repeated PersonalInfo people = 1;
}